src/languages/pyret/style-selection/style/scratch.less
.CodeMirror,
#cmb-editor {
  background: #EBECF0;
}

.blocks-language-pyret {
  // Import the default style, using the parameters set below.
  // Yes, the parameters below here really get passed into the style file imported above them.
  // @import "../default-style.less";
  // @import "../../../../less/default-style.less";

  // Set border parameters for default-style.less:
  @border-radius: 5px;
  @border-width: 2px;
  // Color parameters:
  @comment-color: #ddd;
  @comment-background-color: #444;
  @border-color: black;
  @editing-border-color: orange;
  @error-border-color: red;
  @border-hint: rgba(255, 165, 0, 0.3);
  @drag-drop-background-color: lightblue;
  @drag-replace-background-color: red;

  // Settings for _this_ file:
  @large-border-radius: 15px;
  @literal-number-color: blue;
  @literal-string-color: green;
  @literal-char-color: orange;
  @literal-boolean-color: darkred;
  @literal-symbol-color: steelblue;
  
  .blocks-contract {
    border-radius: 0px;
    opacity: 0.5;
  }



  // css classes
  .blocks-ask,
  .blocks-assign,
  .blocks-bind,
  .blocks-bracket,
  .blocks-check,
  .blocks-check-test,
  .blocks-construct,
  .blocks-contract,
  .blocks-data-field,
  .blocks-for,
  .blocks-func,
  .blocks-funapp,
  .blocks-include,
  .blocks-if,
  .blocks-lambda,
  .blocks-let,
  .blocks-load-table,
  .blocks-reactor,
  .blocks-special-import,
  .blocks-tuple,
  .blocks-tuple-access,
  .blocks-var,
  .blocks-when,
  .blocks-operator {
    display: flex;
    justify-content: center;
    font-weight: bold;
    padding: 1px 5px;
    border: @border-width solid grey;
    border-radius: 2px;
    text-align: center;
    color: white;
    > .blocks-white-space:not(.blocks-editing) {
      min-width: 10px;
      border-radius: 5px;
      border: none;
    }
    .blocks-white-space {
      border-width: 1px;
      min-width: 10px;
    }
    > .blocks-white-space:hover {
      background: black;
      border: dotted 2px darkgray;
    }
    > .blocks-node {
      box-shadow: 0px 0px 10px 1px white;
    }
    >.blocks-literal, .blocks-identifierList {
      box-shadow: none;
      color: white;
    }
    .blocks-literal{ border-width: @border-width; border-style: inset; }
  }

  .blocks-literal {
    font-size: 16px;
    .blocks-literal-number {
      color: @literal-number-color;
    }
    .blocks-literal-string {
      height: 100px;
      color: @literal-string-color;
    }
    .blocks-literal-char {
      color: @literal-char-color;
    }
    .blocks-literal-boolean {
      color: @literal-boolean-color;
    }
    .blocks-literal-symbol {
      color: @literal-symbol-color;
    }
    .blocks-lambdaExpression {
      border-radius: @large-border-radius @large-border-radius 0px 0px;
    }
  }

  // ast nodes (in constructors)
  .blocks-s-assign,
  .blocks-s-bind,
  .blocks-binop,
  // .blocks-block,
  .blocks-s-bracket,
  .blocks-s-check,
  .blocks-checkTest,
  .blocks-constructor,
  .blocks-s-contract,
  .blocks-s-data-field,
  .blocks-s-for,
  .blocks-s-for-bind,
  .blocks-funApp,
  .blocks-funDef,
  .blocks-ifPipeExpression,
  .blocks-if-Expression,
  .blocks-if-else-Expression,
  .blocks-s-include,
  .blocks-lambdaExp,
  .blocks-s-let,
  .blocks-loadTable,
  .blocks-s-reactor,
  .blocks-specialImport,
  .blocks-s-tuple,
  .blocks-tuple-get,
  .blocks-s-var,
  .blocks-s-when
  {
    display: inline-flex;
    flex-direction: column;
    align-items: stretch;
    color: black;
    margin: 2px;
    border: @border-width solid grey;
    border-radius: 2px;
    overflow: hidden;
    white-space: nowrap;
    transition: all 0.5s;

    cursor: grab;
    cursor: -moz-grab;
    cursor: -webkit-grab;

    user-select: none;
  }

  .blocks-ifPipeExpression,
  .blocks-if-else-Expression,
  .blocks-if-Expression {
    border-radius: 0px;
    background: white;
    > .blocks-if {
      justify-content: flex-start;
    }
    > .blocks-cond-table {
      display: table;
      padding: 2px;
      margin: 1px;
      .blocks-cond-drop-row {
        display: table-row;
        .blocks-white-space, .quarantine { min-width: 100%; margin: 0px; height: 5px; transition: height .5s; }
        .blocks-white-space:hover, .quarantine { height: 20px; }
      }
      .blocks-condClause,
      .blocks-if-clause {
        display: table-row-group;
        padding: 3px;
        text-align: center;
        min-width: 200px;
        &:focus {
          outline: @editing-border-color @border-width solid;
        }
        .blocks-cond-row {
          border: 1px solid black;
          text-align: left;
          display: table-row;
          border-top: 1px solid #aaa;
          .blocks-cond-predicate, .blocks-cond-result {
            display: inline-block;
            &.blocks-cond-else {
              color: #777;
            }
          }
          .blocks-cond-predicate {float: left; }
          .blocks-cond-result {float: right; }
        }
        .blocks-cond-row:first-child {
          border-top: 0px;
        }
      }
      .blocks-condClause[aria-expanded=false] {
        display: block;
        height: 20px;
        margin: 5px;
      }
    }
  }


  /* override default CSS rules */
  .blocks-condClause .blocks-cond-row { text-align: center !important; }

  .blocks-condClause .blocks-cond-result { float: none !important; }

  //Colors directly taken from scratch.mit.edu
  @func-background: rgb(255, 102, 128);
  @lam-background: rgb(207, 99, 207);
  .blocks-binop{
    background-color:rgb(89, 192, 89);
    border-radius: 20px;
    border: 1px solid grey;
    padding: 5px;
    .blocks-operator-container{
      
      margin: 0px;
      
      display: inline-block;
      *display: inline;
      vertical-align: top;
      color: white;
    }

    .blocks-operator-input, .blocks-operator {
      margin: 2px;
      display: inline;
      color: white;
    }
    .blocks-operator-text{
      font-weight: bolder;
    }
  }
  
  .blocks-literal, .blocks-literal-number{
    color: white;
  }

  .blocks-literal {
    border: 2px solid black;
    border-radius: 2px;
  }

  .blocks-let {
    background-color: rgb(255, 140, 26);
    border-radius: 5px;
  }

  .blocks-func {
    background-color: @func-background;
    border-radius: 8px;
    border-bottom-left-radius: 0px;
    padding: 5px;
  }
  .blocks-func-body {
    display: inline-block;
    background-color: #ffdbe9;
    .blocks-func-left {
      width: 100px;
      background-color: @func-background;
      display: inline;
    }
    .blocks-func-right {
      display: inline;
    }
  }
  .blocks-func-footer {
    background-color: @func-background;
    border-radius: 8px;
    border-top-left-radius: 0px;
    padding: 5px;
    color: white;
  }

  .blocks-lambda {
    background-color: @lam-background;
  }
}

